[package]
name = "jwt-service"
version = "0.2.4"
readme = "README.md"
edition = "2024"
authors = ["root@ltpp.vip"]
license = "MIT"
description = """A high-performance async library for JWT (JSON Web Token) authentication and authorization. Supports token generation, validation, and custom claims with optimized memory usage, ideal for HTTP clients/servers and web applications."""
keywords = ["jwt", "authentication", "token", "authorization", "json-web-token"]
repository = "https://github.com/crates-dev/jwt-service.git"
categories = ["network-programming", "web-programming"]
exclude = ["target", "Cargo.lock", "sh", ".github"]

[dependencies]
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }

[profile.dev]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"

[profile.release]
incremental = false
opt-level = 3
lto = true
panic = "unwind"
debug = false
codegen-units = 1
strip = "debuginfo"
